# GraduationProject

./: .gitignore  README.md  pyproject.toml
data/: Telco_customer_churn.xlsx  Telco_customer_churn_final_model.xlsx  Telco_customer_churn_preprocessed.xlsx  modeling_data_ready.pkl
docs/superpowers/plans/: 2026-04-15-churn-pipeline-refactor.md
notebook/: 数据集划分.ipynb  数据预处理.ipynb  模型建立.ipynb  模型改进.ipynb  模型改进II.ipynb  模型改进III.ipynb  特征工程.ipynb
notebook/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebook/catboost_info/learn/: events.out.tfevents
reports/: ablation_results.csv  business_impact_curve.csv  business_insights_summary.csv  model_leaderboard.csv  one_class_validation.csv  sdae_leaderboard.csv  shap_top_features.csv
requirements/: ~$过程文档.docx  外文翻译.docx  开题报告.docx  文献综述.docx  过程文档.docx  附件1.浙江工业大学数学科学学院本科生毕业论文（设计）基本规范.docx  附件3.数学科学学院本科生毕业论文（设计）过程文档规范.doc  附件4.数学科学学院本科毕业论文（设计）参考格式.doc
scripts/: dev-shell.ps1  export_results.py  run_ablation.py  run_baselines.py  run_explainability.py  run_sdae.py
src/churn/: __init__.py  baseline_runner.py  cli.py  config.py  data.py  evaluation.py  experiments.py  explain.py  features.py  paths.py  pipeline.py  preprocessing.py  schemas.py  sdae_runner.py  splitter.py  utils.py
src/churn/models/: __init__.py  baselines.py  ensemble.py  (+1 more)
tests/: conftest.py  test_baseline_runner.py  test_evaluation.py  test_experiments.py  test_explain.py  test_features.py  test_paths.py  test_pipeline.py  test_preprocessing.py  test_report_exports.py  test_splitter.py
毕设要求/: rws1.doc  过程文档.docx
